Task 4 add option to show inverse relations